[bdist_wheel]
universal = 1

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E203

[tool:pytest]
testpaths = tests/

[isort]
known_first_party=maya
known_third_party=humanize,pytz,dateparser,tzlocal,pendulum,snaptime
multi_line_output=3
